fixed z-index bug that prevented using navbar

--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,6 @@
 
 nav ul a,
 nav .brand-logo {
-    z-index: 99;
   color: #fff;
 }
 
@@ -59,6 +58,7 @@ footer.page-footer {
 
 .big-banner {
     top: -65px;
+    z-index: -1;
 }
 
 .big-banner .big-header {
